@@ -509,6 +509,7 @@ def suite(module_prefix='', timing_check=None):
         'test_dbtables',
         'test_distributed_transactions',
         'test_early_close',
+        'test_fileid',
         'test_get_none',
         'test_join',
         'test_lock',
